# gdextension_example_bullet_shower

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.txt  icon.svg.import  project.godot  vcpkg.json
addons/gdextension_example_bullet_shower/: .clangd  .gitignore  CMakePresets.json  bullet_shower.gdextension  vcpkg.json
addons/gdextension_example_bullet_shower/src/: bullets.cpp
cmake/: gdextension.cmake  install.cmake  options.cmake  pre_project.cmake
cmake/toolchains/: emscripten-overwrite.cmake  mingw64-toolchain.cmake
data/: gd.build.in  gd.install.in
demo/: bullet.png.import  bullet_shower.gdextension  bullets.gd  example_scene.tscn  face_happy.png.import  face_sad.png.import  icon.webp.import  player.gd.uid  shower.tscn
src/: CMakeLists.txt  bullets.cpp  bullets.hpp  gdexample.cpp  gdexample.hpp  main.cpp  register_types.cpp  register_types.hpp
